turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:3: error: STOP is already defined as value STOP
val STOP:Int = 0;
    ^Turmite:14: error: not found: value indice
	setCouleurSol(colors((indice + 1) % colors.length));
                              ^